--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ itsdangerous==1.1.0
 jinja2==2.11.2
 mako==1.1.3
 markupsafe==1.1.1
+phonenumbers==8.12.19
 pyjwt==1.7.1
 python-dateutil==2.8.1
 python-dotenv==0.14.0
