--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,6 +9,7 @@
     "http-proxy-middleware": "^1.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-phone-number-input": "^3.1.16",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.2",
