--- a/react-app/package.json
+++ b/react-app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "chart.js": "^2.9.4",
+    "chartjs-plugin-annotation": "^0.5.7",
     "http-proxy-middleware": "^1.0.5",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
