--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ FLASK_APP=app
 FLASK_ENV=development
 SECRET_KEY=<<your secret here>>
 DATABASE_URL=postgresql://<<user_name>>:<<password>>@<<server(localhost)>>/<<database_name>>
-SECRET_KEY=sk_test_1234
+STRIPE_SECRET_KEY=sk_test_1234
+STRIPE_PUBLISHABLE_KEY=pk_test_1234
