--- a/react-app/package.json
+++ b/react-app/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^2.9.4",
     "chartjs-plugin-annotation": "^0.5.7",
     "crypto-js": "^4.0.0",
+    "dotenv": "^8.2.0",
     "http-proxy-middleware": "^1.0.5",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
